<resources>
    <string name="app_name">V.S.L. Catena</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Logo</string>
    <string name="action_add">Voeg toe</string>
    <string name="action_edit">Pas aan</string>
    <string name="action_delete">Verwijder</string>

    <string name="general_ok">OK</string>
    <string name="general_title">Titel</string>
    <string name="general_content">Content</string>
    <string name="general_post">Plaats</string>
    <string name="general_yes">Ja</string>
    <string name="general_no">Nee</string>
    <string name="general_error">Er ging iets fout: %s</string>

    <string name="post_header_edited">Laatst aangepast door: %s</string>

    <string name="news_new_item">Nieuwe nieuws item</string>
    <string name="news_item_delete_successful">Nieuws item succesvol verwijderd</string>
    <string name="news_item_delete_confirmation">Verwijderen van nieuws item</string>
    <string name="news_item_delete_confirmation_content">Weet je zeker dat je de nieuws item \'%s\' wilt verwijderen?</string>

    <string name="promo_new_item">Nieuwe nieuws item</string>
    <string name="promo_item_delete_successful">Nieuws item succesvol verwijderd</string>
    <string name="promo_item_delete_confirmation">Verwijderen van nieuws item</string>
    <string name="promo_item_delete_confirmation_content">Weet je zeker dat je de nieuws item \'%s\' wilt verwijderen?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Not implemented yet</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Gebruikersnaam</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="login_forgot_password">Wachtwoord vergeten</string>
    <string name="action_sign_in">Log in met Catena account</string>
    <string name="error_incorrect_password">Onjuist wachtwoord</string>
    <string name="error_field_required">Dit veld is vereist</string>
    <string name="button_go_to_adventure">Ga naar activiteit</string>


    <string name="bingo_title">ALV BINGO HYPE!</string>

    <string name="preferences_category_basic">Basis instellingen</string>
    <string name="preferences_dark_theme">Dark theme</string>
    <string name="preferences_dark_theme_summary">Wat elke app in onze ogen zou moeten hebben</string>

    <string name="auth_no_clearance">Je hebt niet genoeg rechten om hier toegang tot te krijgen!</string>

    <string name="permission_request_title">Toegang verkrijgen</string>
    <string name="permission_download_for_magazine_explanation">We moeten de ontketend toch echt ergens op slaan... Dus doe niet zo moeilijk en accepteer &lt;3</string>
    <string name="permission_download_for_magazine_denied">Toegang geweigerd, we kunnen \'m niet downloaden :(</string>


    <string name="select_image_pick">Afbeelding toevoegen</string>
    <string name="select_image_edit">Afbeelding veranderen</string>
</resources>
